[package]
name = "rustclient"
version = "0.1.0"
edition = "2021"
# client binary


# binary for simple client
[[bin]]
name = "simple-client"
path = "src/simple_client.rs"

# binary for simple client
[[bin]]
name = "tls-client"
path = "src/tls.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.23.19", features = ["aws_lc_rs", "ring"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
bytes = "1.9.0"
hyper-util = "0.1.10"
hyper = "1.5.1"
hyper-rustls = { version = "0.27.3", default-features = false, features = ["http2"] }
http-body-util = "0.1.2"
tower = "0.4.13"
tonic-build = "0.12.3"
prost = "0.13.2"
prost-types = "0.13.1"
tonic = "0.12.3"
prost-build = "0.13.3"

[build-dependencies]
tonic-build = "0.12.3"